# housevaluation

./: .env  Cargo.toml  README.md
data/: idealista_homes_spain.csv
src/: main.rs
src/core/: cervo.rs  mod.rs  types.rs
src/core/scrapers/: idealista.rs  mod.rs
